# job-analyzer

./: .gitignore  pyproject.toml
examples/: document_upload_example.py
src/: main.py
src/config/: app_config.toml
src/job_analyzer/database/: layoff_db.py  models.py
src/job_analyzer/document_storage/: __init__.py  document_manager.py  models.py
src/job_analyzer/external_api/: glassdoor.py  google_search.py  langsearch.py  llm_analysis.py  models.py  news_api.py
src/llm/: inference.py
src/llm/base/: callbacks.py  inference.py
src/llm/gemini/: inference.py
src/llm/local/: inference.py
src/llm/openai/: inference.py
src/llm/tools/: analysis_tools.py  document_tools.py  glassdoor_tools.py  google_search_tools.py  langsearch_tools.py  layoff_tools.py  news_tools.py  tool_helper.py
src/routes/: app_route.py  models.py  router_helper.py
src/utils/: app_config.py  constants.py  document_extractor.py  document_summarizer.py  docx_extractor.py  llm_config.py  logging_utils.py  pdf_extractor.py  vars.py
tests/test_database/: test_layoff_db.py
tests/test_external_api/: test_glassdoor_api.py  test_news_api.py
tests/test_files/: test_resume.docx  test_resume.txt
tests/test_job_analyzer/: __init__.py  test_analysis_tools.py
tests/test_utils/: test_app_config.py  test_document_extractors.py  test_vars.py
tests/testfiles/: lay_off_test_file.csv
