[project]
name = "job-analyzer"
version = "0.1.0"
description = ""
authors = [{ name = "Abu Ghalib", email = "abughalib64@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, < 4.0"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "tomli-w (>=1.2.0,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "contextvars (>=2.4,<3.0)",
    "tabulate (>=0.9.0,<0.10.0)",
]

[tool.poetry]
packages = [{ include = "job_analyzer", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
