[project]
name = "job-analyzer"
version = "0.1.0"
description = ""
authors = [{ name = "Abu Ghalib", email = "abughalib64@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, < 4.0"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "tomli-w (>=1.2.0,<2.0.0)",
    "langchain (>=1.0,<2.0)",
    "langchain-openai (>=1.0,<2.0)",
    "contextvars (>=2.4,<3.0)",
    "tabulate (>=0.9.0,<1.0)",
    "langchain-google-genai (>=3.1.0,<4.0.0)",
    "langchain-core (>=1.1.0,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "job_analyzer", from = "src" }]


[build-system]
requires = ["poetry-core>=2.2.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"
